traces/bug_736.txt
src/femlib/MatriceCreuse_tpl.hpp:1334: error: DEAD_STORE
  The value written to &nbcoef (type int) is never used.
Showing all 1 steps of the trace


src/femlib/MatriceCreuse_tpl.hpp:1334:5: Write of unused value
1332.   	}
1333.        } 
1334.       int nbcoef=mij.size();
            ^
1335.   
1336.     // return new   MatriceMorse<R>(n,m,mij,sym);   
